--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Pig Game</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
     <main>
@@ -30,5 +32,6 @@
       <button class="btn btn--roll"> Roll dice</button>
       <button class="btn btn--hold"> Hold</button>
     </main>
+    <script src="assets/script/script.js"></script>
   </body>
 </html>
