--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
   </head>
   <body>
     <main>
-      <section class="player player--0 player--active">
-        <h2 class="name" id="name--0">Player 1</h2>
-        <p class="score" id="score--0">0</p>
+      <section class="player player_0 player_active">
+        <h2 class="name" id="name_0">Player 1</h2>
+        <p class="score" id="score_0">0</p>
         <div class="current">
           <p class="current-label">Current</p>
-          <p class="current-score" id="current--0">0</p>
+          <p class="current-score" id="current_0">0</p>
         </div>
       </section>
-      <section class="player player--1">
-        <h2 class="name" id="name--1">Player 2</h2>
-        <p class="score" id="score--1">0</p>
+      <section class="player player_1">
+        <h2 class="name" id="name_1">Player 2</h2>
+        <p class="score" id="score_1">0</p>
         <div class="current">
           <p class="current-label">Current</p>
-          <p class="current-score" id="current--1">0</p>
+          <p class="current-score" id="current_1">0</p>
         </div>
       </section>
 
       <img src="assets/images/dice-6.png" alt="Playing dice" class="dice" />
-      <button class="circle--target">100 </button>
-      <button class="btn btn--new"> New game</button>
-      <button class="btn btn--roll"> Roll dice</button>
-      <button class="btn btn--hold"> Hold</button>
+      <button class="circle_target">100 </button>
+      <button class="btn btn_new"> New game</button>
+      <button class="btn btn_roll"> Roll dice</button>
+      <button class="btn btn_hold"> Hold</button>
     </main>
     <script src="assets/script/script.js"></script>
   </body>
