Add Target Section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-
   <div class="player">
     <div class="player_container first_player">
       <div class="player_name">
@@ -38,6 +37,8 @@
       </div>
     </div>
   </div>
+  <div class="target-title">Target</div>
+  <div class="target">100</div>
 
 </body>
 
