add New game, Roll and hold button

--- a/index.html
+++ b/index.html
@@ -37,8 +37,19 @@
       </div>
     </div>
   </div>
+
+  <button class="btn btn_new_game">New Game</button>
+
+  <!-- Target Section -->
   <div class="target-title">Target</div>
   <div class="target">100</div>
+
+  <!-- Dice Section -->
+  <img src="assets/images/dice-6.png" alt="Dice" class="dice">
+
+  <!-- Button Section -->
+  <button class="btn btn_roll">Roll</button>
+  <button class="btn btn_hold">Hold</button>
 
 </body>
 
