--- a/index.html
+++ b/index.html
@@ -13,44 +13,44 @@
 <body>
   <div class="player">
     <div class="player_container first_player">
-      <div class="player_name">
-        Rohullah Ahmadyar
+      <div class="player_name" id="player_one">
+        Player one
       </div>
-      <div class="player_score">
+      <div class="player_score" id="player_score_1">
         20
       </div>
-      <div class="player_current_score">
+      <div class="player_current_score" id="current_1">
         10
       </div>
     </div>
   </div>
   <div class="player">
     <div class="player_container second_player">
-      <div class="player_name">
-        Rohullah Ahmadyar
+      <div class="player_name" id="player_two">
+        Player two
       </div>
-      <div class="player_score">
+      <div class="player_score"  id="player_score_2">
         20
       </div>
-      <div class="player_current_score">
+      <div class="player_current_score" id="current_2">
         10
       </div>
     </div>
   </div>
 
-  <button class="btn btn_new_game">New Game</button>
+  <button class="btn btn_new_game" onclick="startNewGame();">New Game</button>
 
   <!-- Target Section -->
   <div class="target-title">Target</div>
   <div class="target">100</div>
 
   <!-- Dice Section -->
-  <img src="assets/images/dice-6.png" alt="Dice" class="dice">
+  <img src="assets/images/dice-6.png" alt="Dice" class="dice" id="dice">
 
   <!-- Button Section -->
-  <button class="btn btn_roll">Roll</button>
-  <button class="btn btn_hold">Hold</button>
-
+  <button class="btn btn_roll" onclick="handleRoll();">Roll</button>
+  <button class="btn btn_hold" onclick="handleHoldButton();">Hold</button>
+  <script src="assets/script/script.js"></script>
 </body>
 
 </html>
