--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
 
 <body>
   <div class="player">
-    <div class="player_container first_player">
-      <div class="player_name" id="player_one">
+    <div class="player_container first_player" id="player_1">
+      <div class="player_name" id="player_one_name">
         Player one
       </div>
       <div class="player_score" id="player_score_1">
-        20
+        0
       </div>
       <div class="player_current_score" id="current_1">
-        10
+        0
       </div>
     </div>
   </div>
   <div class="player">
-    <div class="player_container second_player">
-      <div class="player_name" id="player_two">
+    <div class="player_container second_player" id="player_2">
+      <div class="player_name" id="player_two_name">
         Player two
       </div>
       <div class="player_score"  id="player_score_2">
-        20
+        0
       </div>
       <div class="player_current_score" id="current_2">
-        10
+        0
       </div>
     </div>
   </div>
